fixed spacing inside of sumary list item

--- a/src/styles/partials/components/_summary-list.scss
+++ b/src/styles/partials/components/_summary-list.scss
@@ -1,6 +1,6 @@
 .dg_summary-list {
   background: $gray-lightest;
-  padding: ($base-spacing-unit * 10) $padding-small; /* this spacing unit is only used in the summary list */
+  padding: ($base-spacing-unit * 10) $padding-large; /* this spacing unit is only used in the summary list */
 
   .dg_summary-list__item {
     display: flex;
@@ -12,6 +12,10 @@
 
     p {
       color: $gray;
+    }
+
+    & > div {
+      width: 75%;
     }
   }
 
